--- a/build.gradle
+++ b/build.gradle
@@ -104,10 +104,10 @@ jastadd {
             }
 
             jastadd {
-                basedir "src/gen/jastadd/"
-                include "**/*.ast"
-                include "**/*.jadd"
-                include "**/*.jrag"
+                basedir "src/"
+                include "**/**/*.ast"
+                include "**/**/*.jadd"
+                include "**/**/*.jrag"
             }
 
             scanner {
