fixed a bug by manual debug (An ASTNode(ExampleElement) is saved in SchemaNode after reverse-function )

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     mavenLocal()
+    maven {
+        name "gitlab-maven"
+        url "https://git-st.inf.tu-dresden.de/api/v4/groups/jastadd/-/packages/maven"
+    }
 }
 
 dependencies {
@@ -26,6 +30,7 @@ dependencies {
     implementation group: 'com.flipkart.zjsonpatch', name: 'zjsonpatch', version: '0.4.11'
     implementation group: 'io.swagger.parser.v3', name: 'swagger-parser', version: '2.0.30'
 
+    testImplementation group: 'de.tudresden.inf.st', name: 'dumpAstWithPlantuml', version: '0.3.6'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
     testImplementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.6.0'
