--- a/build.gradle
+++ b/build.gradle
@@ -14,32 +14,49 @@ repositories {
     mavenCentral()
     mavenLocal()
     maven {
-        name "gitlab-maven"
-        url "https://git-st.inf.tu-dresden.de/api/v4/groups/jastadd/-/packages/maven"
+        name 'gitlab-maven'
+        url 'https://git-st.inf.tu-dresden.de/api/v4/groups/jastadd/-/packages/maven'
     }
 }
 
 dependencies {
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.1'
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.12.1'
-    implementation group: 'net.sf.beaver', name: 'beaver-rt', version: '0.9.11'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.8'
-    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
-    implementation group: 'com.flipkart.zjsonpatch', name: 'zjsonpatch', version: '0.4.11'
-    implementation group: 'io.swagger.parser.v3', name: 'swagger-parser', version: '2.0.30'
+    implementation group: 'com.flipkart.zjsonpatch', name: 'zjsonpatch', version: "${json_patch_version}"
+    implementation group: 'io.swagger.parser.v3', name: 'swagger-parser', version: "${swagger_parser_version}"
 
-    testImplementation group: 'de.tudresden.inf.st', name: 'dumpAstWithPlantuml', version: '0.3.6'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
-    testImplementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.6.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${junit_jupiter_version}"
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${junit_jupiter_version}"
+    testImplementation group: 'com.jayway.jsonpath', name: 'json-path', version: "${json_path_version}"
+}
+
+def versionFile = 'src/main/resources/version.properties'
+def oldProps = new Properties()
+
+try {
+    file(versionFile).withInputStream { stream -> oldProps.load(stream) }
+    version = oldProps['version']
+} catch (e) {
+    // this happens, if either the properties file is not present, or cannot be read from
+    throw new GradleException("File ${versionFile} not found or unreadable. Aborting.", e)
+}
+
+task printVersion() {
+    doLast {
+        println(version)
+    }
+}
+
+task newVersion() {
+    doFirst {
+        def props = new Properties()
+        props['version'] = value
+        props.store(file(versionFile).newWriter(), null)
+    }
 }
 
 buildscript {
     repositories.mavenCentral()
     dependencies {
-        classpath 'org.jastadd:jastaddgradle:1.13.3'
+        classpath "org.jastadd:jastaddgradle:${jastaddgradle_version}"
     }
 }
 
@@ -48,7 +65,7 @@ jar {
   manifest {
     attributes(
       'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-      'Main-Class': 'de.tudresden.inf.st.openapi'
+      'Main-Class': "${mainClassName}"
     )
   }
 }
@@ -114,15 +131,6 @@ jastadd {
                 include "**/**/*.jadd"
                 include "**/**/*.jrag"
             }
-
-            scanner {
-                //include "src/main/jastadd/OpenAPISpecification.flex"
-            }
-
-            parser {
-               //include "src/main/jastadd/OpenAPISpecification.parser"
-            }
-
         }
     }
 
@@ -132,10 +140,6 @@ jastadd {
     genDir = 'src/gen/java'
 
     buildInfoDir = 'src/gen-res'
-    parser.name = 'OpenAPIParser'
-
-    scanner.genDir = "src/gen/java/de/tudresden/inf/st/most/jastadd/scanner"
-    parser.genDir = "src/gen/java/de/tudresden/inf/st/most/jastadd/parser"
 
     jastaddOptions = [
             "--lineColumnNumbers",
