--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ build:
   image: openjdk:11
   stage: build
   script:
+    - "./gradlew relast"
     - "./gradlew assemble"
   artifacts:
     paths:
