--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,9 @@ test:
   script:
     - "./gradlew test"
   artifacts:
+    when: always
+      reports:
+        junit: build/test-results/test/**/TEST-*.xml
     paths:
       - "src/main/resources"
 
