--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,9 +26,11 @@ test:
   script:
     - "./gradlew test"
   artifacts:
+    paths:
+      - "src/main/resources"
     when: always
-      reports:
-        junit: build/test-results/test/**/TEST-*.xml
+    reports:
+      junit: build/test-results/test/**/TEST-*.xml
 
 ragdoc_build:
   image:
