edited build.gradle and gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ swagger_parser_version = 2.0.30
 junit_jupiter_version = 5.7.0
 json_path_version = 2.6.0
 jastaddgradle_version = 1.13.3
+grammar2uml_version = 0.2.1
