--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,10 +30,11 @@ test:
   script:
     - "./gradlew test"
   artifacts:
-    reports:
-      junit: "*/build/test-results/test/TEST-*.xml"
     paths:
-      - "src/gen/resources"
+      - "src/main/resources"
+    when: always
+    reports:
+      junit: build/test-results/test/**/TEST-*.xml
 
 ragdoc_build:
   image:
@@ -90,5 +91,3 @@ publish_package:
   script:
     - "./gradlew setDevVersionForCI"
     - "./gradlew publish"
-  only:
-    - 8-create-maven-package
