--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,9 @@ task generateGrammarDiagrams(type: JavaExec) {
     outputs.files file(grammarDiagramFile)
 }
 
+// task generateRandomRequests
+// task generateInferredRequests
+
 task relast(type: JavaExec) {
     classpath = files("libs/relast.jar")
     group = 'Build'
