--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${junit_jupiter_version}"
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: "${junit_jupiter_version}"
     testImplementation group: 'com.jayway.jsonpath', name: 'json-path', version: "${json_path_version}"
+    testImplementation group: 'commons-validator', name: 'commons-validator', version: "${commons_validator_version}"
 }
 
 buildscript {
